SFDC-DX/src/objects/Office_Info__c.object
<CustomObject>
    <fields>
        <fullName>Cell_No__c</fullName>
        <label>Cell_No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALUTATION__c</fullName>
        <label>SALUTATION</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Office_Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Office_info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office_Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>